Polish texts in html

--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
         target="_blank"
         rel="noopener noreferrer"
       >
-        arxiv xxxx</a
+        arxiv to_be_published</a
       >.
     </p>
     <div class="main-container">
