Polish html text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Chemical Compound Search and Visualization System</title>
+<title> Organic Compound Flammability Explorer </title>
 <style>
     * {
         box-sizing: border-box;
@@ -756,7 +756,7 @@
 
         <!-- Bottom: 3D Visualization -->
         <div class="visualization-container">
-            <h2>3D Molecular Visualization</h2>
+            <h2> Search results </h2>
             
             <div class="loading-indicator" id="visualizationLoading">
                 <div class="loading-spinner"></div>
