--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
 </style>
 </head>
 <body>
-    <h1>Chemical Compound Search and Visualization System</h1>
+    <h1>Organic Compound Flammability Explorer</h1>
     <p class="description">
       For the publication, see
       <a
@@ -682,7 +682,7 @@
         target="_blank"
         rel="noopener noreferrer"
       >
-        arxiv to_be_published</a
+        ... (to be published) </a
       >.
     </p>
     <div class="main-container">
