--- a/index.html
+++ b/index.html
@@ -682,8 +682,12 @@
         target="_blank"
         rel="noopener noreferrer"
       >
-        ... (to be published) </a
+        ... (to be published)</a
       >.
+    </p>
+    <p class="description">
+      Contact the author:
+      <a href="mailto:jiaqi.zhou@epfl.ch">jiaqi.zhou@epfl.ch</a>
     </p>
     <div class="main-container">
         <!-- Top: Compound Filter -->
